--- a/app/src/main/res/layout/countries_fragment.xml
+++ b/app/src/main/res/layout/countries_fragment.xml
@@ -13,27 +13,28 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             tools:context=".MainActivity">
-        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
+        <!--TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
             android:text="@{viewModel.response}"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"/>
+            app:layout_constraintBottom_toBottomOf="parent"/-->
         <!--TODO:Make the span adapt to tablets-->
-        <!--TODO:androidx.recyclerview.widget.RecyclerView
+        <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/countries_grid"
                 android:layout_width="0dp"
                 android:layout_height="0dp"
                 android:padding="6dp"
                 android:clipToPadding="false"
                 app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
-                app:spanCount="2"
+                app:spanCount="1"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintRight_toRightOf="parent"
                 app:listData="@{viewModel.countries}"
                 tools:itemCount="16"
-                tools:listitem="@layout/grid_item"/-->
+                tools:listitem="@layout/grid_item"/>
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
