--- a/app/src/main/res/layout/country_detail_fragment.xml
+++ b/app/src/main/res/layout/country_detail_fragment.xml
@@ -12,6 +12,7 @@
         <androidx.constraintlayout.widget.ConstraintLayout android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:padding="16dp">
+            <!--TODO:Formatting-->
             <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                 android:id="@+id/country_name"
                 app:layout_constraintStart_toStartOf="parent"
